@@ -779,6 +779,7 @@ AC_OUTPUT([
  clients/Makefile
  common/Makefile
  conf/Makefile
+ conf/upssched.conf.sample
  data/html/header.html
  data/html/Makefile
  data/Makefile
